--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -11,7 +11,7 @@
 
 <body>
   <noscript>
-    <strong>We're sorry but log-analysis doesn't work properly without JavaScript enabled. Please enable it to
+    <strong>We're sorry but ckman doesn't work properly without JavaScript enabled. Please enable it to
       continue.</strong>
   </noscript>
   <div id="app"></div>
